# clubs-cli-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clubs-demo.py  clubs-demo.sh  demo-log.md
src/: main.rs
src/cmd/: init.rs  mod.rs
src/cmd/content/: decrypt.rs  mod.rs
src/cmd/edition/: compose.rs  inspect.rs  mod.rs  permits.rs  sequence.rs  verify.rs
src/cmd/permits/: derive.rs  mod.rs
src/io/: mod.rs
