[package]
name = "clubs-cli"
version = "0.1.0"
edition = "2024"
publish = false

description = "Command-line interface for composing and inspecting Gordian Club editions."
license = "BSD-2-Clause-Patent"
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-rust"
readme = "README.md"

[[bin]]
name = "clubs"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.5", features = ["derive", "unstable-styles"] }

clubs = { path = "../clubs" }
bc-components = "^0.25.0"
bc-envelope = "^0.34.0"
bc-ur = "^0.13.0"
bc-xid = "^0.13.0"
known-values = "^0.8.0"
provenance-mark = "^0.13.0"
dcbor = "^0.23.0"
hex = "^0.4"
