[package]
name = "clubs-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for composing and inspecting Gordian Club editions."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/clubs-cli-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/clubs-cli"
keywords = ["encoding", "cbor", "binary", "format", "publishing"]                          # Up to five
categories = ["data-structures", "encoding"]                                               # https://crates.io/category_slugs

[[bin]]
name = "clubs"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.5", features = ["derive", "unstable-styles"] }

clubs = "^0.1.0"
bc-components = "^0.31.0"
bc-envelope = "^0.41.0"
bc-ur = "^0.19.0"
bc-xid = "^0.19.0"
known-values = "^0.15.0"
provenance-mark = "^0.20.0"
dcbor = "^0.25.0"
hex = "^0.4"
